fix: delete white space between border and input

--- a/src/main.css
+++ b/src/main.css
@@ -68,6 +68,7 @@ button {
 .vd-tree .ant-tree-node-content-wrapper {
   border-radius: 0;
   padding: 0 4px;
+  line-height: 30px;
   border-bottom: solid 1px #f0f0f0;
 }
 
